<resources>
    <string name="app_name">GYS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home">Home</string>
    <string name="haveaccount">بالفعل لديك حساب؟</string>
    <string name="usinggoogle">قم بالتسجيل باستخدام الجيميل</string>
    <string name="usingface">قم بالتسجيل باستخدام الفيس بوك</string>
    <string name="signup">تسجيل</string>
    <string name="repeatpass">أعد كتابة كلمة المرور</string>
    <string name="pass">كلمة المرور</string>
    <string name="phone">رقم الهاتف</string>
    <string name="name">الاسم</string>
    <string name="createaccount">إنشاء حساب</string>
    <string-array name="govornorates">
        <item>Cairo</item>
        <item>Luxor</item>
        <item>Alex</item>
        <item>Aswan</item>
    </string-array>
</resources>
